alignment issue fixed

--- a/css/linkedinInject.css
+++ b/css/linkedinInject.css
@@ -73,6 +73,7 @@ div.claimWork_d{
 
 img.popup{
 	height: 30px;
+	padding-top: 2.5px;
 }
 
 img.claimWork{
